--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,3 +1,14 @@
-<p>
-  work works!
-</p>
+<section id="work">
+  <div class="copy row flex" id="welcome">
+    <div class="copy-body col-10 col-md-6">
+      <h1>Oh, hi.</h1>
+      <p>
+        Welcome to my portfolio site and thank you for taking the time to investigate me, beyond my resumé. I made this website to display and clearly communicate my worth as a designer. If you hate it – that's fine – I'll have redesigned it before
+        the new year.
+      </p>
+      <p class="text-info">
+        Keep scrolling to check out some of my neat work.
+      </p>
+    </div>
+  </div>
+</section>
