--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.h1,
+h1 {
+  font-size: 3rem;
+  margin-bottom: 0.5em;
+}
