created first project card, hover state, sizing, rough styles.

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,3 +1,5 @@
-<p>
-  project works!
-</p>
+<div class="project-container">
+  <div class="p-logo" background-image="../../../assets/logo.svg"></div>
+  <div class="p-title">TEST</div>
+  <div class="p-description d-none d-md-block">Lorem ipsum dolor sit amet, consecutur adipisicing elit, sed do eiusmod tempor</div>
+</div>
