--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -12,3 +12,6 @@
     </div>
   </div>
 </section>
+<section class="projects row flex no-gutters">
+  <app-project class="col-6 col-md-3 p-3"></app-project>
+  </section>
