--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,5 +1,5 @@
 <section id="work">
-  <div class="copy row flex" id="welcome">
+  <div class="copy row flex no-gutters" id="welcome">
     <div class="copy-body col-10 col-md-6">
       <h1>Oh, hi. 👋🏻</h1>
       <p>
