--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <section id="contact">
-  <div class="copy row flex">
+  <div class="copy row flex no-gutters">
     <div class="copy-body col-10 col-md-6">
       <h1>I'm available</h1>
       <p>Let me know if you find yourself needing:</p>
