finished up the 404 page with a neat text-clip – updated some of the navbar and started on the about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,17 @@
-<p>
-  about works!
-</p>
+<section id="about">
+  <div class="copy row flex no-gutters">
+    <div class="avatar-image col-7 col-md-2">
+    </div>
+    <div class="copy-body col-10 col-md-6">
+      <h1>Spencer Dixon</h1>
+      <p>
+        Lorem ipsum dolor sit amet cosecutor adipiscing elit, sed do eiusmod tempor incididntu ut labore et dolore magna aliqua.
+      </p>
+      <hr />
+      <button class="btn btn-info">Download Resume</button><button class="btn btn-secondary">Download Cover Letter</button>
+    </div>
+  </div>
+  <div class="resume row flex no-gutters" id="resume">
+
+  </div>
+</section>
