interpolation is working for the cards on the work page. –images are not. having to run through a janky 3rd party json host

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,17 +1,72 @@
-<section id="about">
+<section id="about" class="">
   <div class="copy row flex no-gutters">
-    <div class="avatar-image col-7 col-md-2">
-    </div>
-    <div class="copy-body col-10 col-md-6">
-      <h1>Spencer Dixon</h1>
-      <p>
-        Lorem ipsum dolor sit amet cosecutor adipiscing elit, sed do eiusmod tempor incididntu ut labore et dolore magna aliqua.
-      </p>
-      <hr />
-      <button class="btn btn-info">Download Resume</button><button class="btn btn-secondary">Download Cover Letter</button>
+    <div class="copy-body d-flex col-10 col-md-6">
+      <img class="avatar-image" src="../../assets/profile-pic.jpg" />
+      <div class="copy-body">
+
+        <h1>Spencer Dixon</h1>
+        <p>
+          Lorem ipsum dolor sit amet cosecutor adipiscing elit, sed do eiusmod tempor incididntu ut labore et dolore magna aliqua.
+        </p>
+        <hr />
+          <div class="btn-group"><button class="btn btn-primary">Download Resume</button><button class="btn btn-light">Download Cover Letter</button></div>
+      </div>
     </div>
   </div>
   <div class="resume row flex no-gutters" id="resume">
+    <div class="career-path col-11 col-md-6 offset-md-1">
 
+      <div class="resume-item">
+        <h2 class="job-title">UX/UI Developer</h2>
+        <div class="job-subTitle">thecampus.market | 2018 – Present</div>
+        <div class="job-description">
+          My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
+          the design, except for the terrible logo.
+        </div>
+      </div>
+
+      <div class="resume-item">
+        <h2 class="job-title">Interactive Experience Designer</h2>
+        <div class="job-subTitle">Expertvoice | 2015 – Present</div>
+        <div class="job-description">
+          Working as part of a design team to accomplish goals of the client but also of the in-house agency. Handling many concurrent, high profile projects. Design, user testing, development and presentation of web components and digital
+          experiences.
+        </div>
+      </div>
+
+      <div class="resume-item past">
+        <h2 class="job-title">Design Consultant</h2>
+        <div class="job-subTitle">Various Clients | 2013 – 2018</div>
+        <div class="job-description">
+          Working solo for clients like Artemis Health, CityGro, and others. User testing, high fidelity mocks, interaction design, handoff, etc.
+        </div>
+      </div>
+
+      <div class="resume-item">
+        <h2 class="job-title">Shift Manager</h2>
+        <div class="job-subTitle">Top Hat Video | 2011 – Present</div>
+        <div class="job-description">
+          A physical video rental store, like blockbuster, but with 25,000 different movies. Old movies and formats meet new movies and formats, games and TV shows, all together under one roof. This was my first (real/retail) job, I've tried to quit
+          three separate times. Two months after each attempt I wind up depressed and back on the schedule. It's a small family operation, technically not <em>my</em> family, but I'd claim them. If you're thinking – no this can't be redbox killed
+          them all, and then netflix robbed their graves – you're wrong. We have survived in large part due to our loyal community, our outstanding customer service, and our always-go-the-extra-mile employees.
+        </div>
+      </div>
+
+      <div class="resume-item past">
+        <h2 class="job-title">Newspaper Delivery Boy</h2>
+        <div class="job-subTitle">Bountiful Clipper | 2007 – 2011</div>
+        <div class="job-description">
+          This is the job I am most proud of. How many people do you know that stuck with a newspaper delivery job for 4 years? This job taught me the value of hard work, and gave me an undying hatred for printed advertisements.
+        </div>
+      </div>
+
+    </div>
+    <div class="skills col-11 col-md-3 offset-md-1">
+      <h5>Skills</h5>
+      Pluralsight badges here?
+      <div id="wordSearch">
+
+      </div>
+    </div>
   </div>
 </section>
