--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -15,6 +15,16 @@ section#contact {
     justify-content: space-around;
     justify-items: safe;
     align-items: center;
+
+    .squircle {
+      i {
+        color: #fff;
+        font-size: 3em;
+        align-self: center;
+        justify-content: center;
+        margin: 0 auto;
+      }
+    }
   }
 }
 @media screen and (orientation:portrait) {
