json fixed, and data renamed. a few missing links fixed.

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,12 +1,12 @@
 <div class="row flex p-5">
-  <div class="col-6 col-md-2 p-2" *ngFor="let user of users.data">
+  <div class="col-6 col-md-2 p-2" *ngFor="let project of projects.data">
     <div class="project-container" (click)="seeProject()">
-      <div class="p-header" [ngStyle]="{'background-image': 'url(' + user.header + ')'}"></div>
-      <div class="p-logo" [ngStyle]="{'background-image': 'url(' + user.logo + ')'}"></div>
-      <div class="p-id">0{{user.id}}</div>
+      <div class="p-header" [ngStyle]="{'background-image': 'url(' + project.header + ')'}"></div>
+      <div class="p-logo" [ngStyle]="{'background-image': 'url(' + project.logo + ')'}"></div>
+      <div class="p-id">0{{project.id}}</div>
       <div class="text-wrapper">
-        <h3 class="p-title">{{user.name}}</h3>
-        <p class="p-type"> {{user.type}}</p>
+        <h3 class="p-title">{{project.name}}</h3>
+        <p class="p-type"> {{project.type}}</p>
       </div>
 
     </div>
