fixed the damn font-awesome links. should have just started with the most simple solution

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,10 +6,10 @@
 
         <h1>Spencer Dixon</h1>
         <p>
-          Lorem ipsum dolor sit amet cosecutor adipiscing elit, sed do eiusmod tempor incididntu ut labore et dolore magna aliqua.
+          My love affair with the internet began after my family ditched aol internet discs and got dial-up. Back then I was addicted to the internet because of MSN messenger... now I'm addicted because it's my job. Also for the memes.
         </p>
         <hr />
-          <div class="btn-group"><button class="btn btn-primary">Download Resume</button><button class="btn btn-light">Download Cover Letter</button></div>
+          <div class="btn-group"><button class="btn btn-primary"><i class="fad fa-file-download"></i> Resumé</button><button class="btn btn-light"><i class="fad fa-file-download"></i> Cover Letter</button><button class="btn btn-light"><i class="fas fa-dog"></i> Dog Memes</button></div>
       </div>
     </div>
   </div>
