--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -18,11 +18,11 @@
     </div>
   </div>
   <div class="app-locations col-12 col-md-8">
-    <a class="squircle facebook" target="_blank" href="https://www.facebook.com/spennydix"><i class="fa fa-facebook"></i></a>
-    <a class="squircle instagram" target="_blank" href="http://instagram.com/spennydix"><i class="fa fa-instagram"></i></a>
-    <a class="squircle twitter" target="_blank" href="http://twitter.com/spennydix"><i class="fa fa-twitter"></i></a>
-    <a class="squircle linkedin" target="_blank" href="http://linkedin.com/in/spennydix"><i class="fa fa-linkedin"></i></a>
-    <a class="squircle dribbble" target="_blank" href="http://dribbble.com/spennydix"><i class="fa fa-dribbble"></i></a>
-    <a class="squircle email" target="_blank" href="mailto:spencer@spencerdixon.design"><i class="fa fa-envelope"></i></a>
+    <a class="squircle facebook" target="_blank" href="https://www.facebook.com/spennydix"><i class="fab fa-facebook"></i></a>
+    <a class="squircle instagram" target="_blank" href="http://instagram.com/spennydix"><i class="fab fa-instagram"></i></a>
+    <a class="squircle twitter" target="_blank" href="http://twitter.com/spennydix"><i class="fab fa-twitter"></i></a>
+    <a class="squircle linkedin" target="_blank" href="http://linkedin.com/in/spennydix"><i class="fab fa-linkedin"></i></a>
+    <a class="squircle dribbble" target="_blank" href="http://dribbble.com/spennydix"><i class="fab fa-dribbble"></i></a>
+    <a class="squircle email" target="_blank" href="mailto:spencer@spencerdixon.design"><i class="fad fa-envelope"></i></a>
   </div>
 </section>
