--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-light frosted">
   <a class="navbar-brand" href="#">
     <img id="brandLogo" src="../../../assets/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-    <div id="siteName" class="d-md-inline-block">
+    <div id="siteName" class="d-inline-block">
       Spencer Dixon's Portfolio
     </div>
   </a>
