updated a bunch of assets, created word search, re-arranged res.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,10 @@
           My love affair with the internet began after my family ditched aol internet discs and got dial-up. Back then I was addicted to the internet because of MSN messenger... now I'm addicted because it's my job. Also for the memes.
         </p>
         <hr />
-          <div class="btn-group"><button class="btn btn-primary"><i class="fad fa-file-download"></i> Resumé</button><button class="btn btn-light"><i class="fad fa-file-download"></i> Cover Letter</button><button class="btn btn-light"><i class="fas fa-dog"></i> Dog Memes</button></div>
+        <div class="btn-group">
+          <a href="assets/downloads/19-05-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fad fa-file-download"></i>Resumé</a>
+          <a href="assets/downloads/19-05-CL.pdf" download target="_blank" class="btn btn-light"><i class="fad fa-file-download"></i>Cover Letter</a>
+          <a href="https:/instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-light"><i class="fas fa-dog"></i>Dog Memes</a></div>
       </div>
     </div>
   </div>
@@ -17,20 +20,20 @@
     <div class="career-path col-11 col-md-6 offset-md-1">
 
       <div class="resume-item">
-        <h2 class="job-title">UX/UI Developer</h2>
-        <div class="job-subTitle">thecampus.market | 2018 – Present</div>
+        <h2 class="job-title">Interactive Experience Designer</h2>
+        <div class="job-subTitle">Expertvoice | 2015 – Present</div>
         <div class="job-description">
-          My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
-          the design, except for the terrible logo.
+          Working as part of a design team to accomplish goals of the client but also of the in-house agency. Handling many concurrent, high profile projects. Design, user testing, development (coding) and presentation of web components and digital
+          experiences.
         </div>
       </div>
 
       <div class="resume-item">
-        <h2 class="job-title">Interactive Experience Designer</h2>
-        <div class="job-subTitle">Expertvoice | 2015 – Present</div>
+        <h2 class="job-title">UX/UI Developer</h2>
+        <div class="job-subTitle">thecampus.market | 2018 – Present</div>
         <div class="job-description">
-          Working as part of a design team to accomplish goals of the client but also of the in-house agency. Handling many concurrent, high profile projects. Design, user testing, development and presentation of web components and digital
-          experiences.
+          My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
+          the design, except for the terrible logo, and all of the UI engineering.
         </div>
       </div>
 
@@ -38,7 +41,9 @@
         <h2 class="job-title">Design Consultant</h2>
         <div class="job-subTitle">Various Clients | 2013 – 2018</div>
         <div class="job-description">
-          Working solo for clients like Artemis Health, CityGro, and others. User testing, high fidelity mocks, interaction design, handoff, etc.
+          Working solo for clients like Artemis Health, CityGro, PrimeAV and many others. User testing, creating mocks, designing interactions, coding websites and portals, and marketing landing pages, and whatever else I wanted to do instead of
+          have a life outside of work.
+
         </div>
       </div>
 
@@ -47,7 +52,7 @@
         <div class="job-subTitle">Top Hat Video | 2011 – Present</div>
         <div class="job-description">
           A physical video rental store, like blockbuster, but with 25,000 different movies. Old movies and formats meet new movies and formats, games and TV shows, all together under one roof. This was my first (real/retail) job, I've tried to quit
-          three separate times. Two months after each attempt I wind up depressed and back on the schedule. It's a small family operation, technically not <em>my</em> family, but I'd claim them. If you're thinking – no this can't be redbox killed
+          three separate times. Two months after each attempt I wind up depressed and back on the schedule. It's a small family operation, technically not <em>my</em> family, but I'd claim them. If you're thinking – no this can't be, redbox killed
           them all, and then netflix robbed their graves – you're wrong. We have survived in large part due to our loyal community, our outstanding customer service, and our always-go-the-extra-mile employees.
         </div>
       </div>
@@ -62,11 +67,22 @@
 
     </div>
     <div class="skills col-11 col-md-3 offset-md-1">
-      <h5>Skills</h5>
-      Pluralsight badges here?
+      <h5>Skills Search</h5>
       <div id="wordSearch">
-
+        <span class="character-holder">
+          TEAMBUILDINGrjlsktPz
+          jHwaoiSOCCERtqCfrwIu
+          uTqPxqjhLEADERSHIPNa
+          yMgOmrrepoqsoeSprwGp
+          lLANGULARrspgrajnyPo
+          fikGrsJAVASCRIPTreOr
+          wddkvyjrivfzxkjgeiNb
+          ugztrPROBLEMSOLVINGv
+        </span>
       </div>
+      <div class="wordsearch-key">
+        <b>ANSWER KEY:</b> HTML, CSS, Javascript, Angular, Jquery, Design, Problem Solving, Teambuilding, Leadership, Soccer, Ping Pong
+        </div>
     </div>
   </div>
 </section>
