--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -23,6 +23,6 @@
     <a class="squircle twitter" target="_blank" href="http://twitter.com/spennydix"><i class="fab fa-twitter"></i></a>
     <a class="squircle linkedin" target="_blank" href="http://linkedin.com/in/spennydix"><i class="fab fa-linkedin"></i></a>
     <a class="squircle dribbble" target="_blank" href="http://dribbble.com/spennydix"><i class="fab fa-dribbble"></i></a>
-    <a class="squircle email" target="_blank" href="mailto:spencer@spencerdixon.design"><i class="fad fa-envelope"></i></a>
+    <a class="squircle email" target="_blank" href="mailto:me@spencerdixon.design"><i class="fad fa-envelope"></i></a>
   </div>
 </section>
