--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -26,6 +26,8 @@
     z-index: -1;
     top: 0;
     filter: blur(1px);
+    background-position: center;
+    background-size: cover;
   }
 
   .p-id {
