--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -4,15 +4,21 @@ section#about {
     border-radius: 100%;
     min-width: 150px;
     max-height: 150px;
-    margin-right:3rem;
+    margin-right: 3rem;
   }
 
   .copy-body {
     align-items: center;
   }
 
-  .copy-body button {
+  .copy-body a {
     margin-right: 1rem;
+    // overwrites bootstrap style
+    border-radius: 0.25rem !important;
+
+    i {
+      margin-right: 0.5em;
+    }
   }
 
   .resume-item {
@@ -22,8 +28,20 @@ section#about {
   }
 
   .skills {
-    border: 4px solid #f7f7f7;
-    border-radius: 6px;
+    #wordSearch {
+      border: 4px solid #f7f7f7;
+      border-radius: 6px;
+      padding: 1rem;
+
+      span.character-holder {
+        letter-spacing: 0.5em;
+        font-size: 1.7em;
+        writing-mode: vertical-lr;
+        text-orientation: upright;
+        user-select:none;
+        text-transform: uppercase;
+      }
+    }
   }
 }
 
