mobile fixes mostly

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <section id="about" class="">
   <div class="copy row flex no-gutters">
     <div class="copy-body d-flex col-10 col-md-6">
-      <img class="avatar-image" src="../../assets/profile-pic.jpg" />
+      <img class="avatar-image d-none d-md-block" src="../../assets/profile-pic.jpg" />
       <div class="copy-body">
 
         <h1>Spencer Dixon</h1>
@@ -12,12 +12,12 @@
         <div class="btn-group">
           <a href="assets/downloads/19-05-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fad fa-file-download"></i>Resumé</a>
           <a href="assets/downloads/19-05-CL.pdf" download target="_blank" class="btn btn-light"><i class="fad fa-file-download"></i>Cover Letter</a>
-          <a href="https:/instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-light"><i class="fas fa-dog"></i>Dog Memes</a></div>
+          <a href="https:/instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-light d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a></div>
       </div>
     </div>
   </div>
   <div class="resume row flex no-gutters" id="resume">
-    <div class="career-path col-11 col-md-6 offset-md-1">
+    <div class="career-path col-10 col-lg-6 offset-1">
 
       <div class="resume-item">
         <h2 class="job-title">Interactive Experience Designer</h2>
@@ -66,7 +66,7 @@
       </div>
 
     </div>
-    <div class="skills col-11 col-md-3 offset-md-1">
+    <div class="skills d-none d-lg-block col-lg-3 offset-lg-1">
       <h5>Skills Search</h5>
       <div id="wordSearch">
         <span class="character-holder">
