--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -17,8 +17,8 @@
       </ul>
     </div>
   </div>
-  <div class="app-locations col-12 col-md-8">
-    <a class="squircle facebook" target="_blank" href="https://www.facebook.com/spennydix"><i class="fab fa-facebook"></i></a>
+  <div class="app-locations col-9 col-md-8">
+    <a class="squircle facebook" target="_blank" href="https://www.facebook.com/spennydix"><i class="fab fa-facebook-f"></i></a>
     <a class="squircle instagram" target="_blank" href="http://instagram.com/spennydix"><i class="fab fa-instagram"></i></a>
     <a class="squircle twitter" target="_blank" href="http://twitter.com/spennydix"><i class="fab fa-twitter"></i></a>
     <a class="squircle linkedin" target="_blank" href="http://linkedin.com/in/spennydix"><i class="fab fa-linkedin"></i></a>
