--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -1,17 +1,24 @@
-.project-container {
-  background-color: rgba(66, 66, 66, 0.68);
-  border-radius: 3px;
-  padding: 1.5rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  min-height: 300px;
-  max-height: 450px;
-  height: 33vw;
-  position: relative;
-
+a {
   &:hover {
     cursor: pointer;
+    text-decoration: none !important;
+
+    * {
+      text-decoration: none !important;
+    }
+  }
+
+  .project-container {
+    background-color: rgba(66, 66, 66, 0.68);
+    border-radius: 3px;
+    padding: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 300px;
+    max-height: 450px;
+    height: 33vw;
+    position: relative;
 
     .p-logo {
       // display: block !important;
@@ -25,7 +32,7 @@
     width: 100%;
     z-index: -1;
     top: 0;
-    filter: blur(1px);
+    // filter: blur(1px);
     background-position: center;
     background-size: cover;
   }
@@ -53,8 +60,8 @@
 
     p.p-type {
       margin-bottom: 0;
-      font-style:italic;
-      opacity:0.75;
+      font-style: italic;
+      opacity: 0.75;
     }
   }
 
