--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,14 +1,14 @@
 <div class="row flex p-5">
-  <div class="col-6 col-md-2 p-2" *ngFor="let project of projects.data">
+  <a class="col-6 col-md-2 p-3" *ngFor="let project of projects.data" target="_blank" href="{{project.liveLink}}">
     <div class="project-container" (click)="seeProject()">
       <div class="p-header" [ngStyle]="{'background-image': 'url(' + project.header + ')'}"></div>
       <div class="p-logo" [ngStyle]="{'background-image': 'url(' + project.logo + ')'}"></div>
-      <div class="p-id">0{{project.id}}</div>
+      <div class="p-id">{{project.id}}</div>
       <div class="text-wrapper">
         <h3 class="p-title">{{project.name}}</h3>
         <p class="p-type"> {{project.type}}</p>
       </div>
 
     </div>
-  </div>
+  </a>
 </div>
