--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,8 +10,8 @@
         </p>
         <hr />
         <div class="btn-group">
-          <a href="assets/downloads/19-05-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fad fa-file-download"></i>Resumé</a>
-          <a href="assets/downloads/19-05-CL.pdf" download target="_blank" class="btn btn-light"><i class="fad fa-file-download"></i>Cover Letter</a>
+          <a href="assets/downloads/19-05-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fas fa-file-download"></i>Resumé</a>
+          <a href="assets/downloads/19-05-CL.pdf" download target="_blank" class="btn btn-light"><i class="fas fa-file-download"></i>Cover Letter</a>
           <a href="https:/instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-light d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a></div>
       </div>
     </div>
