dark mode settings are half-baked. Time to ship it

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,8 +11,8 @@
         <hr />
         <div class="btn-group">
           <a href="assets/downloads/19-05-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fas fa-file-download"></i>Resumé</a>
-          <a href="assets/downloads/19-05-CL.pdf" download target="_blank" class="btn btn-light"><i class="fas fa-file-download"></i>Cover Letter</a>
-          <a href="https:/instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-light d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a></div>
+          <a href="assets/downloads/19-05-CL.pdf" download target="_blank" class="btn btn-secondary"><i class="fas fa-file-download"></i>Cover Letter</a>
+          <a href="https:/instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-secondary d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a></div>
       </div>
     </div>
   </div>
