--- a/src/app/error/error.component.scss
+++ b/src/app/error/error.component.scss
@@ -8,7 +8,9 @@
   font-weight: 900;
   color: #f8f9fa;
   text-shadow: 1px 1px 1px;
-  background-color: #f9f9f9 !important;
+  // background-color: #f9f9f9 !important;
+  //Dark Mode:
+  background-color:#001f26 !important;
   background: url("../../assets/whiteboard.svg") #fff center no-repeat;
   background-clip: text;
   -webkit-background-clip: text;
