--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -54,11 +54,14 @@ section#about {
 .career-path:before {
   content: "";
   height: 100%;
-  width: 2px;
+  width: 6px;
   display: block;
   position: absolute;
-  left: -4rem;
-  background-color: #000;
+  left: -4.1rem;
+  // background-color: #000;
+
+  // DARK MODE
+  background-color: #001f26;
 }
 
 .resume-item:before {
@@ -67,12 +70,24 @@ section#about {
   width: 2rem;
   position: absolute;
   left: -4.95rem;
-  border: 3px solid #fff;
+  // border: 3px solid #fff;
+
+  // DARK MODE
+  border: 3px solid #052029;
+
   border-radius: 50%;
-  background: #000;
+  background: #001f26;
 }
 
 .resume-item.past:before {
-  background: #fff;
-  border: 5px solid #000;
+  // background: #fff;
+
+  // DARK MODE
+  background: #002c36;
+
+  // border: 5px solid #000;
+  
+  // DARK MODE
+  border: 5px solid #001f26;
+
 }
