--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-light bg-light frosted">
+<nav class="navbar dark-mode navbar-light bg-light frosted">
   <a class="navbar-brand" href="#">
-    <img id="brandLogo" src="../../../assets/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img id="brandLogo" src="../../../assets/logo-white.svg" width="30" height="30" class="d-inline-block align-top" alt="">
     <div id="siteName" class="d-inline-block">
       Spencer Dixon's Portfolio
     </div>
